# webots-web-log-interface

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
html/webots_web_log_interface/: index.html  interface.html
webots_web_log_interface/: interface.html  interface.py
