[tool.poetry]
name = "webots-web-log-interface"
version = "0.2.1"
readme = "README.md"
homepage = "https://bit-bots.github.io/webots-web-log-interface"
repository = "https://github.com/bit-bots/webots-web-log-interface"
documentation = "https://bit-bots.github.io/webots-web-log-interface/html/webots_web_log_interface"
description = "A python library used to interact with webots robocup game web logs"
authors = ["Florian Vahl <florian@flova.de>"]
license = "MIT"
keywords = ["webots", "logs"]

[tool.poetry.dependencies]
python = ">=3.7, <3.11"
numpy = "^1.21.3"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
pdoc3 = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
